--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,5 @@ spring.jpa.show-sql=true
 spring.datasource.url=jdbc:mysql://localhost:3306/JBDL_76_MINOR1?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=rootroot
+user.valid.days=14
+user.delayed.finePerDay=1
