--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,12 @@ spring.datasource.password=rootroot
 spring.jpa.hibernate.ddl-auto=update
 user.valid.days=14
 user.delayed.finePerDay=1
+student.authority=STUDENT
+admin.authority=ADMIN
+redis.user.details.timeout=10
+#spring.redis.host=localhost
+#spring.redis.port=6379
+#spring.redis.password=
+redis.host=localhost
+redis.port=6379
+redis.password=
